# pravega-rust-benchmark

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  report.sh  results.json
payload/: payload-1000Kb.data  payload-100Kb.data  payload-10Kb.data  payload-1MB.data  payload-250Kb.data  payload-500Kb.data  payload-750Kb.data
src/: channel_data.rs  config.rs  main.rs  result.rs  stats.rs
workloads/: TC31.yaml  TC32.yaml  TC33.yaml  TC34.yaml  TC35.yaml  TC36.yaml  TC37.yaml  TC38.yaml  TC39.yaml  TC40.yaml  TC41.yaml  TC42.yaml  TC43.yaml  TC44.yaml  TC45.yaml  TC46.yaml  TC47.yaml  TC48.yaml  TC49.yaml  TC50.yaml  TC51.yaml  TC52.yaml  TC53.yaml  TC54.yaml  TC55.yaml  TC56.yaml  TC57.yaml  TC58.yaml  TC59.yaml  TC60.yaml  config.yaml
