[package]
name = "pravega-rust-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
rand = "0.8.5"
pravega-client = "0.3.7"
pravega-client-config = "0.3.7"
pravega-client-shared = "0.3.7"
tokio = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
