[package]
name = "pravega-rust-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
pravega-client = "0.3.7"
pravega-client-config = "0.3.7"
pravega-client-shared = "0.3.7"
tokio = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
async-std = "1.10"
statrs = "0.17.1"
threadpool = "1.8.1"